[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterapiv2"
version = "0.2.0"
requires-python = ">=3.8"
description = "application authentication and access to Twitter api v2 endpoints"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { email = "preocts@preocts.com", name = "Preocts" }
]
maintainers = []
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "httpx>=0.23.1"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "mypy",
    "flake8",
    "flake8-builtins",
    "flake8-pep585",
]
test = [
    "pytest",
    "pytest-randomly",
    "coverage",
    "tox"
]

[project.urls]
homepage = "https://github.com/Preocts/twitterapiv2"

[tool.setuptools.package-data]
"twitterapiv2" = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = [
    "tests",
]
source_pkgs = [
    "twitterapiv2",
]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages",
]
test = [
    "tests/",
    "*/tests",
]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]

# This is ignored by flake8, here in case they decide to add it in the future
[tool.flake8]
ignore = "W503,E203"
max-line-length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312,coverage,mypy,pre-commit
skip_missing_interpreters = true
isolated_build = True

[testenv]
deps = .[test]
commands =
    coverage run -p -m pytest tests/

[testenv:coverage]
depends = py38,py39,py310,py311,py312
parallel_show_output = true
commands =
    python -m coverage combine
    python -m coverage report -m --fail-under=50
    python -m coverage json

[testenv:mypy]
deps =
    mypy
commands =
    mypy -p twitterapiv2 --no-incremental

[testenv:pre-commit]
depends = coverage
parallel_show_output = true
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
"""
