[metadata]
name = twitterapiv2
version = 0.0.11
description = application authentication and access to Twitter api v2 endpoints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Preocts/twitterapiv2
author = Preocts
author_email = preocts@preocts.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    http-overeasy@git+https://github.com/preocts/http_overeasy@v1.3.2
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
branch = True
source = tests
source_pkgs =
    twitterapiv2

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImlementedError
    if 0:
    if __name__ == .__main__.:
ignore_errors = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = coverage.xml

[flake8]
ignore = W503,E203
max-line-length = 88
